configure carrierwave to save uploads to s3, share accepts nested attr. for docs

--- a/app/views/documents/_form.html.erb
+++ b/app/views/documents/_form.html.erb
@@ -15,6 +15,11 @@
     <%= f.label :share_id %><br>
     <%= f.number_field :share_id %>
   </div>
+    <div class="field">
+    <%= f.label :file_to_share %><br>
+    <%= f.file_field :item%>
+  </div>
+
   <div class="actions">
     <%= f.submit %>
   </div>
