--- a/app/views/shares/_form.html.erb
+++ b/app/views/shares/_form.html.erb
@@ -23,9 +23,12 @@
     <%= f.label :message %><br>
     <%= f.text_area :message %>
   </div>
+
   <div class="field">
-    <%= f.label :url_string %><br>
-    <%= f.text_field :url_string %>
+    <%= f.fields_for :document do |ff| %>
+    <%= ff.label :file_to_share %><br>
+    <%= ff.file_field :item%>
+    <% end %>
   </div>
   <div class="actions">
     <%= f.submit %>
