--- a/app/views/shares/show.html.erb
+++ b/app/views/shares/show.html.erb
@@ -4,7 +4,10 @@
   <strong>Email:</strong>
   <%= @share.email %>
 </p>
-
+<p>
+  <strong>Id:</strong>
+  <%= @share.id %>
+</p>
 <p>
   <strong>Recipient email:</strong>
   <%= @share.recipient_email %>
@@ -16,8 +19,10 @@
 </p>
 
 <p>
-  <strong>Url string:</strong>
-  <%= @share.url_string %>
+  <strong>Shared File</strong>
+  <% @share.documents.each do |doc| %>
+  <a href="<%= doc.item %>" target="_blank"> Right Click to Download</a>
+  <% end %>
 </p>
 
 <%= link_to 'Edit', edit_share_path(@share) %> |
