--- a/app/views/documents/new.html.erb
+++ b/app/views/documents/new.html.erb
@@ -1,4 +1,6 @@
-<h1>New document</h1>
+<h1>File Uploader</h1>
+<h4>You can upload one file at a time.
+Just click the finish button when you are done uploading files to finalize your share with a personal message.</h4>
 
 <%= render 'form' %>
 
