--- a/app/views/shares/edit.html.erb
+++ b/app/views/shares/edit.html.erb
@@ -1,6 +1,6 @@
-<h1>Editing share</h1>
+<h1>Finalize share</h1>
 
-<%= render 'form' %>
+<%= render 'edit_form' %>
 
 <%= link_to 'Show', @share %> |
 <%= link_to 'Back', shares_path %>
